[gd_scene load_steps=8 format=3 uid="uid://8ws34pf8qc0n"]

[ext_resource type="Script" uid="uid://ludmrdgc8kfq" path="res://Scripts/story_card.gd" id="1_m1bou"]
[ext_resource type="Texture2D" uid="uid://ba5k5whx0g6kc" path="res://Assets/UI/story_card_3.png" id="2_m1bou"]
[ext_resource type="Texture2D" uid="uid://cp04ckjoffni3" path="res://Assets/UI/NextButton.png" id="3_4ploc"]
[ext_resource type="AudioStream" uid="uid://by6leteids6sa" path="res://Assets/Audio/MenuClick.wav" id="4_g2o3g"]

[sub_resource type="Animation" id="Animation_4dstf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_fsdyd"]
resource_name = "expand_tilt_left_then_right"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.7, 0.7), Vector2(0.7, 0.7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.174533, 0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4dstf"]
_data = {
&"RESET": SubResource("Animation_4dstf"),
&"expand_tilt_left_then_right": SubResource("Animation_fsdyd")
}

[node name="Story_3" type="CanvasLayer"]
script = ExtResource("1_m1bou")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("2_m1bou")

[node name="ContinueButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1011.0
offset_top = -173.0
offset_right = 1307.0
offset_bottom = 35.0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(148, 104)
icon = ExtResource("3_4ploc")
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ContinueButton"]
libraries = {
&"": SubResource("AnimationLibrary_4dstf")
}

[node name="ClickSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_g2o3g")

[connection signal="mouse_entered" from="ContinueButton" to="." method="_on_continue_button_mouse_entered"]
[connection signal="mouse_exited" from="ContinueButton" to="." method="_on_continue_button_mouse_exited"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
